fixed java 11 issues